--- a/python/environment.yml
+++ b/python/environment.yml
@@ -5,8 +5,10 @@ channels:
 dependencies:
   - python=3.10.4
   - plotly=5.8.0
+  - seaborn=0.11.2
   - pip:
     - jupyter==1.0.0
+    - matplotlib==3.5.2
     - scipy==1.8.0
     - statsmodels==0.13.2
 prefix: /home/jsnagi/miniconda3/envs/stats-play-env
