--- a/python/environment.yml
+++ b/python/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - pip:
     - jupyter==1.0.0
     - matplotlib==3.5.2
+    - scikit-learn==1.1.1
     - scipy==1.8.0
     - statsmodels==0.13.2
 prefix: /home/jsnagi/miniconda3/envs/stats-play-env
