--- a/python/environment.yml
+++ b/python/environment.yml
@@ -6,6 +6,7 @@ dependencies:
   - python=3.10.4
   - plotly=5.8.0
   - seaborn=0.11.2
+  - pip=23.1.2
   - pip:
     - jupyter==1.0.0
     - matplotlib==3.5.2
