--- a/python/environment.yml
+++ b/python/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - seaborn=0.11.2
   - pip=23.1.2
   - pip:
-    - jupyter==1.0.0
+    - jupyterlab==4.0.9
     - matplotlib==3.5.2
     - scikit-learn==1.1.1
     - scipy==1.8.0
