--- a/python/environment.yml
+++ b/python/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - pip:
     - jupyterlab==4.0.9
     - matplotlib==3.5.2
+    - notebook==7.0.7
     - scikit-learn==1.1.1
     - scipy==1.8.0
     - statsmodels==0.13.2
