--- a/python/environment.yml
+++ b/python/environment.yml
@@ -11,8 +11,8 @@ dependencies:
     - jupyterlab==4.0.9
     - matplotlib==3.5.2
     - notebook==7.0.7
+    - prophet==1.1.5
     - scikit-learn==1.1.1
     - scipy==1.8.0
     - statsmodels==0.13.2
     - tqdm==4.66.1
-prefix: /home/jsnagi/miniconda3/envs/stats-play-env
